[package]
name = "sender"
version = "0.1.0"
authors = ["r0"]
edition = "2018"

[dependencies]

# Say Hello
ferris-says = "0.1"

# Config from settings.toml
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

# Logging
log = "0.4"
pretty_env_logger = "0.3"

# Tarantool
#rusty_tarantool = "0.1"

# The latest version of the "futures" library, which has lots of utilities
# for writing async code. Enable the "tokio-compat" feature to include the
# functions for using futures 0.3 and async/await with the Tokio library.
futures-preview = { version = "0.3.0-alpha.12", features = ["tokio-compat"] }

# Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# server and to make HTTP requests.
hyper = "0.12"

# Tokio is a runtime for asynchronous I/O applications. Hyper uses
# it for the default server runtime. The `tokio` crate also provides an
# an `await!` macro similar to the one in `std`, but it supports `await!`ing
# both futures 0.1 futures (the kind used by Hyper and Tokio) and
# futures 0.3 futures (the kind produced by the new `async`/`await!` language
# feature).
tokio = { version = "0.1", features = ["async-await-preview"] }

# Https (TLS)
rustls = "0.15"
tokio-rustls = "0.9"